--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -10,14 +10,36 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>My Bicycle Shop</title>
+    <link rel="stylesheet" href="/css/demo.css">
+    <title>Nashville Bakery</title>
 </head>
 <body>
 
 <div class="container">
-    <h1>Shop</h1>
+    <h1>Nashville Bakery</h1>
     <hr>
+<!--    //-->
+    <table class="products-parts-names">
+        <tr>
+            <th>Parts</th>
+            <td>Flour</td>
+            <td>Butter</td>
+            <td>Eggs</td>
+            <td>Milk</td>
+            <td>Vanilla Extract</td>
+        </tr>
+        <tr>
+            <th>Products</th>
+            <td>Birthday Cakes</td>
+            <td>Cupcakes</td>
+            <td>Croissants</td>
+            <td>Cookies</td>
+            <td>Tarts</td>
+        </tr>
+
+
+    </table>
+<!--    //-->
     <h2>Parts</h2>
     <form th:action="@{/mainscreen}">
         Filter: <input type="text" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required />
