Added the about page and the navigation to and from the about and main pages

--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -16,7 +16,13 @@
 <body>
 
 <div class="container">
-    <h1>Nashville Bakery</h1>
+    <div class="top-of-page">
+        <h1>Nashville Bakery</h1>
+        <nav>
+            <a th:href="@{/}">Home</a>
+            <a th:href="@{/about}">About</a>
+        </nav>
+    </div>
     <hr>
 <!--    //-->
     <table class="products-parts-names">
