--- a/src/main/resources/static/css/demo.css
+++ b/src/main/resources/static/css/demo.css
@@ -7,5 +7,21 @@
     padding-left: 10px;
 }
 .products-parts-names tr:first-child{
-    background-color: lightgray;
+    background-color: #eee;
+}
+
+.top-of-page{
+    position: sticky;
+    top: 0;
+    left: 0;
+    padding: 0 30px;
+    width: 100%;
+    z-index: 100;
+    background-color: #eee;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.25);
+}
+
+.container-about{
+    background-color: green;
+    padding: 20px;
 }
