--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="top-of-page">
         <h1>Nashville Bakery</h1>
-        <nav>
+        <nav class="navigation">
             <a th:href="@{/}">Home</a>
             <a th:href="@{/about}">About</a>
         </nav>
