--- a/src/main/resources/static/css/demo.css
+++ b/src/main/resources/static/css/demo.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 /*Products-Parts names*/
 .products-parts-names th{
     width: 125px;
@@ -17,11 +20,52 @@
     padding: 0 30px;
     width: 100%;
     z-index: 100;
-    background-color: #eee;
+    color: white;
+    background-color: #555;
     box-shadow: 0 2px 5px rgba(0,0,0,0.25);
 }
 
-.container-about{
-    background-color: green;
-    padding: 20px;
+.navigation{
+    padding: 5px 10px;
+}
+.navigation a{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    width: 150px;
+    margin-right: 10px;
+    padding: 5px;
+    border-radius: 5px;
+}
+.navigation a:hover{
+    background-color: rgba(7,7,7,0.25);
+}
+h1{
+    margin: 0;
+}
+.about-content{
+    width: 820px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+.form-container{
+    width: 450px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+p {
+    text-align: justify;
+    text-align-last: left;
+
+}
+
+@media (max-width: 820px) {
+    .about-content{
+        width: 100%;
+    }
+}
+@media (max-width: 450px) {
+    .form-container{
+        width: 100%;
+    }
 }
