Added a sample inventory with 5 parts and 5 products

--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -25,26 +25,25 @@
     </div>
     <hr>
 <!--    //-->
-    <table class="products-parts-names">
-        <tr>
-            <th>Parts</th>
-            <td>Flour</td>
-            <td>Butter</td>
-            <td>Eggs</td>
-            <td>Milk</td>
-            <td>Vanilla Extract</td>
-        </tr>
-        <tr>
-            <th>Products</th>
-            <td>Birthday Cakes</td>
-            <td>Cupcakes</td>
-            <td>Croissants</td>
-            <td>Cookies</td>
-            <td>Tarts</td>
-        </tr>
-
-
-    </table>
+<!--    <table class="products-parts-names">-->
+<!--        <tr>-->
+<!--            <th>Parts</th>-->
+<!--            <td>Flour</td>-->
+<!--            <td>Butter</td>-->
+<!--            <td>Eggs</td>-->
+<!--            <td>Milk</td>-->
+<!--            <td>Vanilla Extract</td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <th>Products</th>-->
+<!--            <td>Birthday Cakes</td>-->
+<!--            <td>Cupcakes</td>-->
+<!--            <td>Croissants</td>-->
+<!--            <td>Cookies</td>-->
+<!--            <td>Tarts</td>-->
+<!--        </tr>-->
+<!--        -->
+<!--    </table>-->
 <!--    //-->
     <h2>Parts</h2>
     <form th:action="@{/mainscreen}">
