--- a/src/main/resources/templates/negativeerror.html
+++ b/src/main/resources/templates/negativeerror.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/demo.css">
     <title>Negative Error</title>
 </head>
 <body>
 <p>Cannot delete a part used in a product</p>
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<div class="link-to-main-screen">
+    <a href="http://localhost:8080/">Link
+        to Main Screen</a>
+</div>
 </body>
 </html>
