--- a/src/main/resources/templates/purchaseFailure.html
+++ b/src/main/resources/templates/purchaseFailure.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--    <meta charset="UTF-8">-->
-    <meta http-equiv="refresh"
-          content="0;URL='mainscreen'">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/demo.css">
-    <title>Title</title>
+    <title>purchaseFailure</title>
 </head>
 <body>
-<h1>Your product has been deleted</h1>
+<h1>Purchase Failure</h1>
+
+<h2>Error!</h2>
+<p><strong> <span th:text="${message}"></span></strong></p>
 
 <div class="link-to-main-screen">
     <a href="http://localhost:8080/">Link
