--- a/src/main/resources/templates/ConfirmationBuyProduct.html
+++ b/src/main/resources/templates/ConfirmationBuyProduct.html
@@ -2,20 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/demo.css">
     <title>Title</title>
 </head>
 <body>
 <h1>Purchase Confirmation</h1>
 <p><strong>Success! Your purchase has been completed.</strong></p>
 
-<h3>Summary:</h3>
+<h4>Summary:</h4>
 <div>
     <p>Product Name:<strong> <span th:text="${product.name}"></span></strong></p>
     <p>Product Price:<strong> $<span th:text="${product.price}"></span></strong></p>
 </div>
 
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<div class="link-to-main-screen">
+    <a href="http://localhost:8080/">Link
+        to Main Screen</a>
+</div>
 
 </body>
 </html>
