--- a/src/main/resources/templates/confirmationaddpart.html
+++ b/src/main/resources/templates/confirmationaddpart.html
@@ -4,12 +4,15 @@
     <meta http-equiv="refresh"
           content="0;URL='mainscreen'">
 <!--    <meta charset="UTF-8">-->
+    <link rel="stylesheet" href="/css/demo.css">
     <title>Title</title>
 </head>
 <body>
 <h1>Your part has been added or updated</h1>
 
-<a href="http://localhost:8080/">Link
-  to Main Screen</a>
+<div class="link-to-main-screen">
+    <a href="http://localhost:8080/">Link
+        to Main Screen</a>
+</div>
 </body>
 </html>
