Displayed error messages when inventory is not between min and max values

--- a/src/main/resources/static/css/demo.css
+++ b/src/main/resources/static/css/demo.css
@@ -56,16 +56,56 @@ h1{
 p {
     text-align: justify;
     text-align-last: left;
+    margin: 0;
+}
 
+.mb-4{
+    margin-bottom: 0!important;
+    margin-top: 1.5rem!important;
+}
+
+.link-to-main-screen{
+    margin: 50px 0 20px 0;
+    display: flex;
 }
 
 .link-to-main-screen a{
     color: Blue;
     text-decoration: none;
     padding: 3px 10px;
+    margin: 0 auto;
     border: 1px solid gray;
     border-radius: 5px;
-    background-color: rgba(220,220,220,0.35);;
+    background-color: rgba(220,220,220,0.35);
+}
+.input-errors{
+    color: rgba(250,10,50);
+    margin: 0 0 10px 0;
+    padding: 3px 0 0 0;
+}
+form input {
+    padding: 2px;
+}
+.form-input{
+    margin-top: 20px;
+}
+.submit-button{
+    margin: 15px 0;
+}
+.submit-button input{
+    padding: 5px 20px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    font-weight: bold;
+    color: white;
+    background-color: rgba(10, 100, 10);
+}
+
+.clear-btn, .search-btn{
+    background-color: rgba(50, 250, 180, 0.4);
+    padding: 5px 20px;
+    border-radius: 5px;
+    border: 1px solid gray;
 }
 
 
