--- a/src/main/resources/templates/OutsourcedPartForm.html
+++ b/src/main/resources/templates/OutsourcedPartForm.html
@@ -32,21 +32,23 @@
            <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</p>
 
            <p><input type="text" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
-           <p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
+           <p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}" class="input-errors">Inventory Error</p>
 
            <p><input type="text" th:field="*{minInv}" placeholder="Min Inventory" class="form-control mb-4 col-4"/></p>
-           <p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Min Inventory Error</p>
+           <p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}" class="input-errors">Min Inventory Error</p>
 
            <p><input type="text" th:field="*{maxInv}" placeholder="Max Inventory" class="form-control mb-4 col-4"/></p>
-           <p th:if="${#fields.hasErrors('maxInv')}" th:errors="*{maxInv}">Max Inventory Error</p>
+           <p th:if="${#fields.hasErrors('maxInv')}" th:errors="*{maxInv}" class="input-errors">Max Inventory Error</p>
 
 
            <p><input type="text" th:field="*{companyName}" placeholder="Company Name" class="form-control mb-4 col-4"/></p>
 
-           <p><input type="submit" value="Submit" /></p>
+           <p class="submit-button" ><input type="submit" value="Submit" /></p>
        </form>
-       <a href="http://localhost:8080/">Link
-           to Main Screen</a>
+       <div class="link-to-main-screen">
+           <a href="http://localhost:8080/">Link
+               to Main Screen</a>
+       </div>
    </div>
 </div>
 
