--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -4,52 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/demo.css">
     <title>Part Form</title>
 
 <!--    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
 </head>
 <body>
-<h1>Product Detail</h1>
-<form action="#" th:action="@{/showFormAddProduct}" th:object="${product}" method="POST"}>
-    <!-- Add hidden form field to handle update -->
-    <p><input type="hidden" th:field="*{id}"/></p>
-
-    <p><input type="text" th:field="*{name}" placeholder="Name" class="form-control mb-4 col-4"/></p>
-
-    <p><input type="text" th:field="*{price}" placeholder= "Price" class="form-control mb-4 col-4"/></p>
-
-
-    <p><input type="text" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
-
-    <p>
-    <div th:if="${#fields.hasAnyErrors()}">
-    <ul><li th:each="err: ${#fields.allErrors()}" th:text="${err}"></li></ul>
+<div class="container">
+    <div class="top-of-page">
+        <h1>Nashville Bakery</h1>
+        <nav class="navigation">
+            <a th:href="@{/}">Home</a>
+            <a th:href="@{/about}">About</a>
+        </nav>
     </div>
-    </p>
-    <p><input type="submit" value="Submit" /></p>
-</form>
+    <div class="form-container">
+        <h1>Product Detail</h1>
+        <form action="#" th:action="@{/showFormAddProduct}" th:object="${product}" method="POST"}>
+            <!-- Add hidden form field to handle update -->
+            <p><input type="hidden" th:field="*{id}"/></p>
+
+            <p class="form-input">Name<input type="text" th:field="*{name}" placeholder="Name" class="form-control col-4"/></p>
+
+            <p class="form-input">Price<input type="text" th:field="*{price}" placeholder= "Price" class="form-control col-4"/></p>
 
 
-<table class="table table-bordered table-striped">
-    <thead class="thead-dark">
-    <h2>Available Parts</h2>
-    <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Inventory</th>
-        <th>Action</th>
-    </tr>
-    </thead>
-    <form>
-    <tr th:each="tempPart : ${availparts}">
-        <td th:text="${tempPart.name}">1</td>
-        <td th:text="${tempPart.price}">1</td>
-        <td th:text="${tempPart.inv}">1</td>
-        <td><a th:href="@{/associatepart(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3">Add</a>
-        </td>
-    </tr>
-    </form>
-</table>
+            <p class="form-input">Inventory<input type="text" th:field="*{inv}" placeholder="Inventory" class="form-control col-4"/></p>
+
+            <p>
+            <div th:if="${#fields.hasAnyErrors()}">
+                <ul class="input-errors">
+                    <li th:each="err: ${#fields.allErrors()}" th:text="${err}"></li>
+                </ul>
+            </div>
+            </p>
+            <p class="submit-button"><input type="submit" value="Submit" /></p>
+        </form>
+    </div>
+
+
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+        <h2>Available Parts</h2>
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Inventory</th>
+            <th>Min Inventory</th>
+            <th>Max Inventory</th>
+            <th>Action</th>
+        </tr>
+        </thead>
+        <form>
+            <tr th:each="tempPart : ${availparts}">
+                <td th:text="${tempPart.name}">1</td>
+                <td th:text="${tempPart.price}">1</td>
+                <td th:text="${tempPart.inv}">1</td>
+                <td th:text="${tempPart.minInv}">1</td>
+                <td th:text="${tempPart.maxInv}">1</td>
+                <td><a th:href="@{/associatepart(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3">Add</a>
+                </td>
+            </tr>
+        </form>
+    </table>
     <table class="table table-bordered table-striped">
         <h2>Associated Parts</h2>
         <thead class="thead-dark">
@@ -57,6 +76,8 @@
             <th>Name</th>
             <th>Price</th>
             <th>Inventory</th>
+            <th>Min Inventory</th>
+            <th>Max Inventory</th>
             <th>Action</th>
         </tr>
         </thead>
@@ -65,13 +86,19 @@
             <td th:text="${tempPart.name}">1</td>
             <td th:text="${tempPart.price}">1</td>
             <td th:text="${tempPart.inv}">1</td>
+            <td th:text="${tempPart.minInv}">1</td>
+            <td th:text="${tempPart.maxInv}">1</td>
             <td><a th:href="@{/removepart(partID=${tempPart.id})}"  class="btn btn-primary btn-sm mb-3">Remove</a>
             </td>
         </tr>
         </tbody>
     </table>
 
-<!--<footer><a href="http://localhost:8080/">Link-->
-<!--    to Main Screen</a></footer>-->
+    <div class="link-to-main-screen">
+        <a href="http://localhost:8080/">Link
+            to Main Screen</a>
+    </div>
+</div>
+
 </body>
 </html>
