--- a/src/main/resources/templates/saveproductscreen.html
+++ b/src/main/resources/templates/saveproductscreen.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <p>Please save product before adding parts!</p>
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<div class="link-to-main-screen">
+    <a href="http://localhost:8080/">Link
+        to Main Screen</a>
+</div>
 </body>
 </html>
